# BjSip

./: CMakeLists.txt  Main.qml  Resources.qrc  main.cpp  translationSR.qm  translationSR.ts  translationSRC.qm  translationSRC.ts
Components/Calls/: CallEnded.qml  CallFooter.qml  CallGrid.qml  CallHistory.qml  CallHistoryItem.qml  CallPendingScreen.qml  VoiceCallUserBox.qml
Components/Calls/CallAnswerButton/: CallAnswerButton.qml  CallAnswerButtonAnimatedBorder.qml
Components/Calls/CallPendingDots/: CallPendingDot.qml  CallPendingDots.qml
Components/Calls/IncomingCallPopup/: IncomingCallPopup.qml
Components/Forms/: LoginForm.qml  RegisterForm.qml
Components/Reusables/: AppLogo.qml  AppLogoWithText.qml  Avatar.qml  AvatarGroup.qml  Circle.qml  ColorTheme.qml  CustomButton.qml  CustomComboBox.qml  CustomLink.qml  CustomSpinBox.qml  CustomTabButton.qml  CustomTabView.qml  CustomText.qml  CustomTextField.qml  FontAwesomeIcons.qml  Icon.qml  QuaterCircle.qml  RoundedButton.qml
Components/Users/: AddNewContact.qml  ContactList.qml  ContactListItem.qml
Models/: AppState.qml  call-history-model.js  contact-model.js  local-storage.js  user-model.js
Utils/: changeBrightness.js  getBuddiesUsernames.js
Views/: AndroidView.qml  AppBar.qml  CallView.qml  DesktopView.qml  LoginView.qml  MenuView.qml  RegisterView.qml  SettingView.qml
cpp/bcrypt/: bcrypt.cpp  bcrypt.h  qtbcrypt.cpp  qtbcrypt.h
cpp/bcrypt/openwall_crypt/: ow-crypt.h
cpp/sip/: bjaccount.cpp  bjaccount.h  bjaudiomediaport.cpp  bjaudiomediaport.h  bjcall.cpp  bjcall.h  bjendpoint.cpp  bjendpoint.h  bjsip.cpp  bjsip.h  bjuser.cpp  bjuser.h  proba.cpp
